# cboids

./: CMakeLists.txt  README.md  main.cpp
include/: boid.h  drawer.h  mathtools.h  sdl_methods.h  tests.h
src/: boid.cpp  drawer.cpp  mathtools.cpp  sdl_methods.cpp  tests.cpp
